Kubernetes/deployment-identity-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-app
  template:
    metadata:
      labels:
        app: identity-app
    spec:
      containers:
      - name: identity-app
        image: ghcr.io/team-one-pos-tech/identity-service:latest
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "5Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

---
apiVersion: v1
kind: Service
metadata:
  name: svc-identity-app
spec:
  selector:
    app: identity-app
  ports:
  - name: http
    port: 5001
    targetPort: 8080
  type: LoadBalancer
