Kubernetes/deployment-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: ghcr.io/team-one-pos-tech/frameup-order-service:latest
        ports:
          - containerPort: 8080
        environment:
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 5gi
      volumes:
      - name: rabbitmq-config
        configMap:
          name: rabbitmq-config

---
apiVersion: v1
kind: Service
metadata:
  name: svc-order-service
spec:
  selector:
    app: order-service
  ports:
  - name: order-service-port
    port: 5003
    targetPort: 8080
  type: LoadBalancer
