Kubernetes/deployment-postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
          - containerPort: 5432
        environment:
        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: "500m"
            memory: "5Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

---
apiVersion: v1
kind: Service
metadata:
  name: svc-postgres
spec:
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  type: ClusterIP
