Kubernetes/deployment-process-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: process-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: process-service
  template:
    metadata:
      labels:
        app: process-service
    spec:
      containers:
      - name: process-service
        image: ghcr.io/team-one-pos-tech/frameup-process-service:latest
        ports:
          - containerPort: 8080
        environment:
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: svc-process-service
spec:
  selector:
    app: process-service
  ports:
  - name: process-service-port
    port: 5002
    targetPort: 8080
  type: LoadBalancer
